Updated gems Added better-errors (fixes #8) Fixed a navbar issue on small displays [ci skip]

--- a/app/assets/stylesheets/navbar.css.less
+++ b/app/assets/stylesheets/navbar.css.less
@@ -77,12 +77,7 @@
   }
 
   .center-notifications {
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    .center-notifications-container {
-      display: inline-block;
-    }
+    margin-left: 100px;
   }
 }
 
